updated styles for each card

--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -2,3 +2,11 @@
     color: red;
     text-decoration: underline
 }
+
+.characterCard {
+    width: 450px;
+    margin: 0 auto;
+    border: 1px solid blue;
+    margin-top: 20px;
+    background: white;
+}
