simplified my components from 3 to 2, so there is just character.js and characterlist.js

--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -1,12 +1,13 @@
-.content h3 {
+.character h3 {
     color: red;
-    text-decoration: underline
-}
-
-.characterCard {
+    text-decoration: underline;
+  }
+  
+  .characterCard {
     width: 450px;
     margin: 0 auto;
     border: 1px solid blue;
     margin-top: 20px;
     background: white;
-}
+  }
+  
